@@ -1,3 +1,9 @@
+Next 1.4 release
+================
+
+- ``mako_templating``:  added defensive workaround for non-importability
+  of ``mako`` (due to upstream ``markupsafe`` dropping Python 3.2 support).
+
 1.4.1 (2013-04-23)
 ==================
 
